base templates and initial html structure created

--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,4 +1,7 @@
-<p> Learning log</p>
+{% extends "learning_logs/base.html" %}
 
+
+{% block content %}
 <p> Learning log is an application desinged to help you with keeping track of
   your learning progress in any topic you choose</p>
+{% endblock content %}
