--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -1,10 +1,13 @@
 {% extends 'learning_logs/base.html' %}
 
-{% block_content %}
+{% block content %}
 
   <p>Topic: {{ topic }}</p>
 
   <p>Entries:</p>
+  <p>
+    <a href="{% url 'learning_logs:new_entry' topic.id %}"> add new entry</a>
+  </p>
   <ul>
     {% for entry in entries %}
       <li>
