Typos in topics.html and edit_entry.html fixed. Topics list working normally

--- a/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_logs/templates/learning_logs/edit_entry.html
@@ -1,12 +1,12 @@
-{% extendes "learning_logs/base.html" %}
+{% extends "learning_logs/base.html" %}
 
 {% block content %}
 
-  <p><a = href="{% 'learning_logs:topic topic.id %}">{{ topic }}</a></p>
+  <p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
 
   <p>Edit entry:</p>
 
-  <form action="{% 'learning_logs:edit_entry' entry.id %}" method="post"
+  <form action="{% url 'learning_logs:edit_entry' entry.id %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button name="submit">save changes</submit>
